--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Favicons -->
     <link href="static/img/favicon.png" rel="icon">
-    <link href="static/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="static/img/apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
@@ -385,8 +385,9 @@
                             <div class="validate"></div>
                         </div>
                         <div class="form-group">
-                            <textarea  class="form-control" name="entry.1060472253" id="entry.1060472253" rows="5" data-rule="required"
-                                      data-msg="Please write something for us" placeholder="Message - Sending messages via contact form isn´t available"></textarea>
+                            <textarea class="form-control" name="entry.1060472253" id="entry.1060472253" rows="5"
+                                      data-rule="required"
+                                      data-msg="Please write something for us" placeholder="Deine Nachricht"></textarea>
                             <div class="validate"></div>
                         </div>
                         <div class="mb-3">
@@ -455,12 +456,6 @@
 
 <!-- Template Main JS File -->
 <script src="static/js/main.js"></script>
-
-<script>
-    $('#my_form').on('submit', function (e){
-        // $('#my_form').fadeOut(2000)
-    });
-</script>
 
 </body>
 
