--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
                                 <ul>
                                     <!-- <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 30</li>-->
                                     <li><i class="icofont-rounded-right"></i> <strong>Abschluss:</strong> Allgemeine
-                                        Hochschulreife (&#8709; 1,6)
+                                        Hochschulreife 
+                                        <!--(&#8709; 1,6) -->
                                     </li>
                                     <li><i class="icofont-rounded-right"></i> <strong>Abschluss:</strong>
                                         Fachinformatiker für Anwendungsentwicklung (IHK)
