--- a/index.html
+++ b/index.html
@@ -93,15 +93,14 @@
                         <img src="static/img/profile-img.jpg" class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-8 pt-4 pt-lg-0 content">
-                        <h3>Dualer Student Wirtschaftinformatik &amp; Web Developer.</h3>
+                        <h3>Cloud Engineer &amp; Consultant.</h3>
                         <p class="font-italic">
-                            Hallo, ich bin Keno ;) Hauptberuflich bin ich dualer Student. Das heißt, dass ich sowohl in
-                            einem Unternehmen arbeite, als auch studiere. Mein Studiengang heißt Wirtschaftsinformatik
-                            der
-                            sowohl aus Themen der Informatik, als auch Betriebswirtschaft handelt. Neben meinem Studium
-                            programmiere ich aber auch gerne in meiner Freizeit, bzw. setze mich mit Themen der IT und
+                            Hallo, ich bin Keno ;) Hauptberuflich bin ich Cloud Engineer. Ich habe innerhalb des
+                             Studiengangs  Wirtschaftsinformatik
+                            sowohl Themen der Informatik, als auch Betriebswirtschaft behandelt. Mich interessieren
+                            vor allem unternemensgetriebene Themen die den Einsatz von IT und
                             deren
-                            Einsatzmöglichkeiten in Unternehmen auseinander.
+                            Einsatzmöglichkeiten in Unternehmen verbessern.
                         </p>
                         <div class="row">
                             <div class="col-lg-6">
@@ -114,16 +113,18 @@
                                     <li><i class="icofont-rounded-right"></i> <strong>Abschluss:</strong>
                                         Fachinformatiker für Anwendungsentwicklung (IHK)
                                     </li>
-                                    <li><i class="icofont-rounded-right"></i> <strong>Abschluss
-                                            (vorraussichtlich):</strong> Bachelor
+                                    <li><i class="icofont-rounded-right"></i> <strong>Abschluss:</strong> Bachelor
                                     </li>
+                                    <li><i class="icofont-rounded-right"></i> <strong>Abschluss
+                                        (vorraussichtlich):</strong> Master
+                                </li>
                                 </ul>
                             </div>
                             <div class="col-lg-6">
                                 <ul>
                                     <!--                                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 May 1995</li>-->
                                     <li><i class="icofont-rounded-right"></i> <strong>Website:</strong>
-                                        <a>kcoldewey.de</a>
+                                        <a>kenoc1.github.io</a>
                                     </li>
                                     <!--                                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +123 456 7890</li>-->
                                     <li><i class="icofont-rounded-right"></i> <strong>Stadt:</strong> Oldenburg,
@@ -153,7 +154,7 @@
 
                     <div class="col-lg-6">
                         <div class="progress">
-                            <span class="skill">Python <i class="val">80%</i></span>
+                            <span class="skill">C# &amp; .NET<i class="val">80%</i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
                                     aria-valuemax="100"></div>
@@ -161,22 +162,15 @@
                         </div>
 
                         <div class="progress">
-                            <span class="skill">Java <i class="val">80%</i></span>
+                            <span class="skill">Python <i class="val">70%</i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
                                     aria-valuemax="100"></div>
                             </div>
                         </div>
-                        <div class="progress">
-                            <span class="skill">HTML <i class="val">100%</i></span>
-                            <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
-                                    aria-valuemax="100"></div>
-                            </div>
-                        </div>
 
                         <div class="progress">
-                            <span class="skill">CSS <i class="val">70%</i></span>
+                            <span class="skill">Serverless Technologien <i class="val">80%</i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                     aria-valuemax="100"></div>
@@ -184,7 +178,7 @@
                         </div>
 
                         <div class="progress">
-                            <span class="skill">JavaScript <i class="val">75%</i></span>
+                            <span class="skill">JavaScript <i class="val">60%</i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
                                     aria-valuemax="100"></div>
@@ -202,14 +196,6 @@
                     </div>
 
                     <div class="col-lg-6">
-
-                        <div class="progress">
-                            <span class="skill">PHP <i class="val">80%</i></span>
-                            <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
-                                    aria-valuemax="100"></div>
-                            </div>
-                        </div>
 
                         <div class="progress">
                             <span class="skill">WordPress <i class="val">50%</i></span>
@@ -255,21 +241,6 @@
         </div>
             <div class="row">
 
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-                    <div class="icon-box iconbox-blue">
-                        <div class="icon">
-                            <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-                                <path stroke="none" stroke-width="0" fill="#f5f5f5"
-                                    d="M300,521.0016835830174C376.1290562159157,517.8887921683347,466.0731472004068,529.7835943286574,510.70327084640275,468.03025145048787C554.3714126377745,407.6079735673963,508.03601936045806,328.9844924480964,491.2728898941984,256.3432110539036C474.5976632858925,184.082847569629,479.9380746630129,96.60480741107993,416.23090153303,58.64404602377083C348.86323505073057,18.502131276798302,261.93793281208167,40.57373210992963,193.5410806939664,78.93577620505333C130.42746243093433,114.334589627462,98.30271207620316,179.96522072025542,76.75703585869454,249.04625023123273C51.97151888228291,328.5150500222984,13.704378332031375,421.85034740162234,66.52175969318436,486.19268352777647C119.04800174914682,550.1803526380478,217.28368757567262,524.383925680826,300,521.0016835830174">
-                                </path>
-                            </svg>
-                            <i class="bx bxl-dribbble"></i>
-                        </div>
-                        <h4><a href="">Microsoft Office</a></h4>
-                        <p>Es bestehen fortgeschrittene Erfahrungen in Microsoft Excel, Word, Powerpoint und Teams.</p>
-                    </div>
-                </div>
-
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
                     data-aos-delay="200">
                     <div class="icon-box iconbox-orange ">
@@ -284,11 +255,14 @@
                         <h4><a href="">Microsoft Azure</a></h4>
                         <p>Einen Großteil meiner Projekte habe ich mithilfe von MS Azure gelöst. Die
                             Einsatzmöglichkeiten
-                            von Azure sind sehr groß. Ich habe vor allem Serveless Anwendungen (mit Python/Flask)
-                            erstellt,
-                            DNS-Services eingerichtet oder Datenspeicherungen und Aufbereitung (Python, Tablestorage
-                            sowie
-                            MongoDB) vollzogen.</p>
+                            von Azure sind sehr groß. Ich habe vor allem Serveless Anwendungen (mit Python/Flask oder .NET)
+                            erstellt. Meine Skills werden zusätzlich durch etwaige Zertifizierungen () bestätigt:
+                            <ul>
+                                <li><a href="https://www.credly.com/badges/75c46ee0-f974-4c76-8963-254a9e55194a">DevOps Engineer Expert</a></li>
+                                <li><a href="https://www.credly.com/badges/ab7adb40-054e-45c5-8b47-4063afeb6fa0">Azure Administrator Associate</a></li>
+                                <li><a href="https://www.credly.com/badges/7568b28e-8d0e-4f73-96e2-d7cd54736dfc">Azure Data Scientist Associate</a></li>
+                              </ul>
+                        </p>
                     </div>
                 </div>
 
