--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="static/img/favicon.png" rel="icon">
-    <link href="static/img/apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180">
+    <link href="assets/img/favicon.png" rel="icon">
+    <link href="assets/img/apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180">
 
     <!-- Google Fonts -->
     <link
@@ -19,15 +19,15 @@
         rel="stylesheet">
 
     <!-- Vendor CSS Files -->
-    <link href="static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/vendor/icofont/icofont.min.css" rel="stylesheet">
-    <link href="static/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="static/vendor/venobox/venobox.css" rel="stylesheet">
-    <link href="static/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="static/vendor/aos/aos.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
+    <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
     <!-- Template Main CSS File -->
-    <link href="static/css/style.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
 
     <!-- =======================================================
     * Template Name: MyResume - v2.2.0
@@ -90,7 +90,7 @@
 
                 <div class="row">
                     <div class="col-lg-4">
-                        <img src="static/img/profile-img.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-8 pt-4 pt-lg-0 content">
                         <h3>Cloud Engineer &amp; Consultant.</h3>
@@ -170,9 +170,9 @@
                         </div>
 
                         <div class="progress">
-                            <span class="skill">Serverless Technologien <i class="val">80%</i></span>
+                            <span class="skill">Serverless Technologien <i class="val">90%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
                                     aria-valuemax="100"></div>
                             </div>
                         </div>
@@ -256,7 +256,7 @@
                         <p>Einen Großteil meiner Projekte habe ich mithilfe von MS Azure gelöst. Die
                             Einsatzmöglichkeiten
                             von Azure sind sehr groß. Ich habe vor allem Serveless Anwendungen (mit Python/Flask oder .NET)
-                            erstellt. Meine Skills werden zusätzlich durch etwaige Zertifizierungen () bestätigt:
+                            erstellt. Meine Skills werden zusätzlich durch etwaige Zertifizierungen bestätigt:
                         </p>
                             <ul>
                                 <li><a href="https://www.credly.com/badges/75c46ee0-f974-4c76-8963-254a9e55194a">DevOps Engineer Expert</a></li>
@@ -297,6 +297,7 @@
                 <!--                    </div>-->
                 <!--                </div>-->
 
+                <!-- 
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
                     <div class="icon-box iconbox-red">
                         <div class="icon">
@@ -313,6 +314,7 @@
                             verschiedene Aufgaben der Automatisierung eingesetzt.</p>
                     </div>
                 </div>
+                -->
 
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
                     <div class="icon-box iconbox-teal">
@@ -358,7 +360,7 @@
                             <div class="email">
                                 <i class="icofont-envelope"></i>
                                 <h4>Email:</h4>
-                                <p>kenoco1@protonmail.com</p>
+                                <p>coldewey@duck.com</p>
                             </div>
 
                             <!--                        <div class="phone">-->
@@ -460,20 +462,20 @@
     <div id="preloader"></div>
 
     <!-- Vendor JS Files -->
-    <script src="static/vendor/jquery/jquery.min.js"></script>
-    <script src="static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="static/vendor/jquery.easing/jquery.easing.min.js"></script>
-    <script src="static/vendor/php-email-form/validate.js"></script>
-    <script src="static/vendor/waypoints/jquery.waypoints.min.js"></script>
-    <script src="static/vendor/counterup/counterup.min.js"></script>
-    <script src="static/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="static/vendor/venobox/venobox.min.js"></script>
-    <script src="static/vendor/owl.carousel/owl.carousel.min.js"></script>
-    <script src="static/vendor/typed.js/typed.min.js"></script>
-    <script src="static/vendor/aos/aos.js"></script>
+    <script src="assets/vendor/jquery/jquery.min.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
+    <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+    <script src="assets/vendor/counterup/counterup.min.js"></script>
+    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="assets/vendor/venobox/venobox.min.js"></script>
+    <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+    <script src="assets/vendor/typed.js/typed.min.js"></script>
+    <script src="assets/vendor/aos/aos.js"></script>
 
     <!-- Template Main JS File -->
-    <script src="static/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
 
 </body>
 
