feat: changed ul style

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                                         von Azure sind sehr groß. Ich habe vor allem Serveless Anwendungen (mit Python/Flask oder .NET)
                                         erstellt. Meine Skills werden zusätzlich durch etwaige Zertifizierungen bestätigt:
                                     </p>
-                                        <ul>
+                                        <ul style="list-style-type: none;">
                                             <li><a href="https://www.credly.com/badges/75c46ee0-f974-4c76-8963-254a9e55194a">DevOps Engineer Expert</a></li>
                                             <li><a href="https://www.credly.com/badges/ab7adb40-054e-45c5-8b47-4063afeb6fa0">Azure Administrator Associate</a></li>
                                             <li><a href="https://www.credly.com/badges/7568b28e-8d0e-4f73-96e2-d7cd54736dfc">Azure Data Scientist Associate</a></li>
