--- a/index.html
+++ b/index.html
@@ -39,20 +39,20 @@
 
 <body>
 
-    <!-- ======= Mobile nav toggle button ======= -->
-    <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
-
+    !-- ======= Mobile nav toggle button ======= -->
+    <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
+    <i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
     <!-- ======= Header ======= -->
     <header id="header" class="d-flex flex-column justify-content-center">
-
-        <nav class="nav-menu">
-            <ul>
-                <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
-                <li><a href="#about"><i class="bx bx-user"></i> <span>Über mich</span></a></li>
+  
+      <nav id="navbar" class="navbar nav-menu">
+        <ul>
+                <li class="active"><a href="#hero"><i class="bx bx-home scrollto active"></i> <span>Home</span></a></li>
+                <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Über mich</span></a></li>
                 <!--            <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>-->
                 <!--            <li><a href="#portfolio"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>-->
-                <li><a href="#skills"><i class="bx bx-server"></i> <span>Skills</span></a></li>
-                <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+                <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Skills</span></a></li>
+                <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
             </ul>
         </nav><!-- .nav-menu -->
 
@@ -257,7 +257,6 @@
                                             <li><a href="https://www.credly.com/badges/ab7adb40-054e-45c5-8b47-4063afeb6fa0">Azure Administrator Associate</a></li>
                                             <li><a href="https://www.credly.com/badges/7568b28e-8d0e-4f73-96e2-d7cd54736dfc">Azure Data Scientist Associate</a></li>
                                         </ul>
-                                    
                                 </div>
                             </div>
 
