--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section id="hero" class="d-flex flex-column justify-content-center">
         <div class="container" data-aos="zoom-in" data-aos-delay="100">
             <h1>Keno Coldewey</h1>
-            <p>I'm <span class="typed" data-typed-items="Developer, Photographer, Student, Consultant"></span></p>
+            <p>I'm <span class="typed" data-typed-items="Developer, Cloud Engineer, DevOps Engineer, Photographer, Student, Consultant"></span></p>
             <div class="social-links">
                 <!-- <a href="https://twitter.com/kenoc33" class="twitter"><i class="bx bxl-twitter"></i></a> -->
                 <a href="https://www.instagram.com/keno.coldewey/?hl=de" class="instagram"><i
