fix: naming bachelor

--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
                                     <li><i class="icofont-rounded-right"></i> <strong>Abschluss:</strong>
                                         Fachinformatiker für Anwendungsentwicklung (IHK)
                                     </li>
-                                    <li><i class="icofont-rounded-right"></i> <strong>Abschluss:</strong> Bachelor
+                                    <li><i class="icofont-rounded-right"></i> <strong>Abschluss:</strong> Wirtschaftsinformatik (B.Sc.) 
                                     </li>
                                     <li><i class="icofont-rounded-right"></i> <strong>Abschluss
-                                        (vorraussichtlich):</strong> Master
+                                        (vorraussichtlich):</strong> Wirtschaftsinformatik (M.Sc.)
                                 </li>
                                 </ul>
                             </div>
