--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 <ul>
                                     <!--                                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 May 1995</li>-->
                                     <li><i class="icofont-rounded-right"></i> <strong>Website:</strong>
-                                        <a>kenoc1.github.io</a>
+                                        <a href="https://kenoc1.github.io">kenoc1.github.io</a>
                                     </li>
                                     <!--                                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +123 456 7890</li>-->
                                     <li><i class="icofont-rounded-right"></i> <strong>Stadt:</strong> Oldenburg,
