--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                                         von Azure sind sehr groß. Ich habe vor allem Serveless Anwendungen (mit Python/Flask oder .NET)
                                         erstellt. Meine Skills werden zusätzlich durch etwaige Zertifizierungen bestätigt:
                                     </p>
-                                        <ul style="list-style-type: none;">
+                                        <ul style="list-style-type: none; padding-left: 0;">
                                             <li><a href="https://www.credly.com/badges/75c46ee0-f974-4c76-8963-254a9e55194a">DevOps Engineer Expert</a></li>
                                             <li><a href="https://www.credly.com/badges/ab7adb40-054e-45c5-8b47-4063afeb6fa0">Azure Administrator Associate</a></li>
                                             <li><a href="https://www.credly.com/badges/7568b28e-8d0e-4f73-96e2-d7cd54736dfc">Azure Data Scientist Associate</a></li>
@@ -260,7 +260,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in"
+                            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
                                 data-aos-delay="300">
                                 <div class="icon-box iconbox-pink">
                                     <div class="icon">
@@ -273,6 +273,22 @@
                                     </div>
                                     <h4><a href="">Linux</a></h4>
                                     <p>Es bestehen fortgeschrittene Kenntnisse im Bereich Linux.</p>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in">
+                                <div class="icon-box iconbox-teal">
+                                    <div class="icon">
+                                        <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
+                                            <path stroke="none" stroke-width="0" fill="#f5f5f5"
+                                                d="M300,566.797414625762C385.7384707136149,576.1784315230908,478.7894351017131,552.8928747891023,531.9192734346935,484.94944893311C584.6109503024035,417.5663521118492,582.489472248146,322.67544863468447,553.9536738515405,242.03673114598146C529.1557734026468,171.96086150256528,465.24506316201064,127.66468636344209,395.9583748389544,100.7403814666027C334.2173773831606,76.7482773500951,269.4350130405921,84.62216499799875,207.1952322260088,107.2889140133804C132.92018162631612,134.33871894543012,41.79353780512637,160.00259165414826,22.644507872594943,236.69541883565114C3.319112789854554,314.0945973066697,72.72355303640163,379.243833228382,124.04198916343866,440.3218312028393C172.9286146004772,498.5055451809895,224.45579914871206,558.5317968840102,300,566.797414625762">
+                                            </path>
+                                        </svg>
+                                        <i class="bx bx-arch"></i>
+                                    </div>
+                                    <h4><a href="">Soft Skills</a></h4>
+                                    <p>Allgemeine Soft Skills sind vorhanden. Ich würde mich als offenen Menschen und Teamplayer
+                                        beschreiben ;)</p>
                                 </div>
                             </div>
 
@@ -308,22 +324,6 @@
                                 </div>
                             </div>
                             -->
-
-                            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
-                                <div class="icon-box iconbox-teal">
-                                    <div class="icon">
-                                        <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-                                            <path stroke="none" stroke-width="0" fill="#f5f5f5"
-                                                d="M300,566.797414625762C385.7384707136149,576.1784315230908,478.7894351017131,552.8928747891023,531.9192734346935,484.94944893311C584.6109503024035,417.5663521118492,582.489472248146,322.67544863468447,553.9536738515405,242.03673114598146C529.1557734026468,171.96086150256528,465.24506316201064,127.66468636344209,395.9583748389544,100.7403814666027C334.2173773831606,76.7482773500951,269.4350130405921,84.62216499799875,207.1952322260088,107.2889140133804C132.92018162631612,134.33871894543012,41.79353780512637,160.00259165414826,22.644507872594943,236.69541883565114C3.319112789854554,314.0945973066697,72.72355303640163,379.243833228382,124.04198916343866,440.3218312028393C172.9286146004772,498.5055451809895,224.45579914871206,558.5317968840102,300,566.797414625762">
-                                            </path>
-                                        </svg>
-                                        <i class="bx bx-arch"></i>
-                                    </div>
-                                    <h4><a href="">Soft Skills</a></h4>
-                                    <p>Allgemeine Soft Skills sind vorhanden. Ich würde mich als offenen Menschen und Teamplayer
-                                        beschreiben ;)</p>
-                                </div>
-                            </div>
 
                         </div>
                     </div>
