--- a/index.html
+++ b/index.html
@@ -76,8 +76,11 @@
                 <a href="https://www.xing.com/profile/Keno_Coldewey" class="xing"><i
                         class='bx bxs-user-account'></i></a>
             </div>
+            <a href="#" onclick="setLanguage('en')">English</a> 
+            <a href="#" onclick="setLanguage('de')">German</a>
         </div>
-    </section><!-- End Hero -->
+    </section>
+    <!-- End Hero -->
     <main id="main">
 
         <!-- ======= About Section ======= -->
@@ -94,7 +97,7 @@
                     </div>
                     <div class="col-lg-8 pt-4 pt-lg-0 content">
                         <h3>Cloud Engineer &amp; Consultant.</h3>
-                        <p class="font-italic">
+                        <p class="font-italic" id="descriptionsAbout">
                             Hallo, ich bin Keno ;) Hauptberuflich bin ich Cloud Engineer. Ich habe innerhalb des
                              Studiengangs  Wirtschaftsinformatik
                             sowohl Themen der Informatik, als auch Betriebswirtschaft behandelt. Mich interessieren
