test2: multi language

--- a/index.html
+++ b/index.html
@@ -473,7 +473,20 @@
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
-
+    <script>
+        var language; 
+        function getLanguage() {
+        (localStorage.getItem('language') == null) ? setLanguage('en') : false;
+        $.ajax({ 
+        url:  '/language/' +  localStorage.getItem('language') + '.json', 
+        dataType: 'json', async: false, dataType: 'json', 
+        success: function (lang) { language = lang } });
+        }
+        
+        function setLanguage(lang) {
+        localStorage.setItem('language', lang);
+        }
+        </script>
 </body>
 
 </html>
