--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <h3>Cloud Engineer &amp; Consultant.</h3>
                         <p class="font-italic" id="descriptionsAbout">
                             Hallo, ich bin Keno ;) Hauptberuflich bin ich Cloud Engineer. Ich habe innerhalb des
-                             Studiengangs  Wirtschaftsinformatik
+                            Studiengangs  Wirtschaftsinformatik
                             sowohl Themen der Informatik, als auch Betriebswirtschaft behandelt. Mich interessieren
                             vor allem unternemensgetriebene Themen die den Einsatz von IT und
                             deren
@@ -428,7 +428,7 @@
     <footer id="footer">
         <div class="container">
             <h3>Keno Coldewey</h3>
-            <p>Dualer Student Wirtschaftsinformatik (Bachelor of Science)</p>
+            <p>Cloud Engineer & Consultant. (Bachelor of Science)</p>
             <div class="social-links">
                 <!-- <a href="https://twitter.com/kenoc33" class="twitter"><i class="bx bxl-twitter"></i></a> -->
                 <a href="https://www.instagram.com/keno.coldewey/?hl=de" class="instagram"><i
