--- a/index.html
+++ b/index.html
@@ -76,8 +76,10 @@
                 <a href="https://www.xing.com/profile/Keno_Coldewey" class="xing"><i
                         class='bx bxs-user-account'></i></a>
             </div>
+            <!-- multi language
             <a href="#" onclick="setLanguage('en')">English</a> 
             <a href="#" onclick="setLanguage('de')">German</a>
+            -->
         </div>
     </section>
     <!-- End Hero -->
