--- a/index.html
+++ b/index.html
@@ -431,6 +431,7 @@
         <div class="container">
             <h3>Keno Coldewey</h3>
             <p>Cloud Engineer & Consultant. (Bachelor of Science)</p>
+            <a href="imprint.html">Impressum</a>
             <div class="social-links">
                 <!-- <a href="https://twitter.com/kenoc33" class="twitter"><i class="bx bxl-twitter"></i></a> -->
                 <a href="https://www.instagram.com/keno.coldewey/?hl=de" class="instagram"><i
