--- a/imprint.html
+++ b/imprint.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Impressum</title>
-
+    <h1>Impressum</h1>
     <p><u>Angaben gem. &sect; 5 TMG:</u></p>
     <p>Coldewey, Keno</p>
     <p>Elbestra&szlig;e 9</p>
@@ -25,7 +25,5 @@
     <p><u>Urheberrecht</u></p>
     <p>Die auf unserer Webseite ver&ouml;ffentlichen Inhalte und Werke unterliegen dem deutschen Urheberrecht (<a href="http://www.gesetze-im-internet.de/bundesrecht/urhg/gesamt.pdf" target="_blank" rel="noopener noreferrer">http://www.gesetze-im-internet.de/bundesrecht/urhg/gesamt.pdf</a>) . Die Vervielf&auml;ltigung, Bearbeitung, Verbreitung und jede Art der Verwertung des geistigen Eigentums in ideeller und materieller Sicht des Urhebers au&szlig;erhalb der Grenzen des Urheberrechtes bed&uuml;rfen der vorherigen schriftlichen Zustimmung des jeweiligen Urhebers i.S.d. Urhebergesetzes (<a href="http://www.gesetze-im-internet.de/bundesrecht/urhg/gesamt.pdf" target="_blank" rel="noopener noreferrer">http://www.gesetze-im-internet.de/bundesrecht/urhg/gesamt.pdf</a> ). Downloads und Kopien dieser Seite sind nur f&uuml;r den privaten und nicht kommerziellen Gebrauch erlaubt. Sind die Inhalte auf unserer Webseite nicht von uns erstellt wurden, sind die Urheberrechte Dritter zu beachten. Die Inhalte Dritter werden als solche kenntlich gemacht. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte unverz&uuml;glich entfernen.</p>
     <p>Dieses <a href="https://jurarat.de/muster-impressum">Impressum</a> wurde freundlicherweise von <a href="https://jurarat.de/">jurarat.de</a> zur Verf&uuml;gung gestellt.</p>
-
-
   </head>
 </html>
