feat: add custom domain

--- a/imprint.html
+++ b/imprint.html
@@ -10,7 +10,7 @@
     <p>26188 Edewecht</p>
     <p><br></p>
     <p><u>Kontaktaufnahme:</u></p>
-    <p>E-Mail: coldewey@duck.com</p>
+    <p>E-Mail: mail@kenoc.de</p>
     <p>&nbsp;</p>
     <p><strong>Haftungsausschluss &ndash; Disclaimer:</strong></p>
     <p><u>Haftung f&uuml;r Inhalte</u></p>
