--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 <ul>
                                     <!--                                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 May 1995</li>-->
                                     <li><i class="icofont-rounded-right"></i> <strong>Website:</strong>
-                                        <a href="https://kenoc1.github.io">kenoc1.github.io</a>
+                                        <a href="https://kenoc.de">kenoc.de</a>
                                     </li>
                                     <!--                                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +123 456 7890</li>-->
                                     <li><i class="icofont-rounded-right"></i> <strong>Stadt:</strong> Oldenburg,
@@ -359,7 +359,7 @@
                             <div class="email">
                                 <i class="icofont-envelope"></i>
                                 <h4>Email:</h4>
-                                <p>coldewey@duck.com</p>
+                                <p>mail@kenoc.de</p>
                             </div>
 
                             <!--                        <div class="phone">-->
