--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
       <nav id="navbar" class="navbar nav-menu">
         <ul>
                 <li class="active"><a href="#hero"><i class="bx bx-home scrollto active"></i> <span>Home</span></a></li>
-                <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Über mich</span></a></li>
+                <!-- <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Über mich</span></a></li> -->
                 <!--            <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>-->
                 <!--            <li><a href="#portfolio"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>-->
-                <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Skills</span></a></li>
+                <!-- <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Skills</span></a></li>-->
                 <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
             </ul>
         </nav><!-- .nav-menu -->
@@ -62,7 +62,7 @@
     <section id="hero" class="d-flex flex-column justify-content-center">
         <div class="container" data-aos="zoom-in" data-aos-delay="100">
             <h1>Keno Coldewey</h1>
-            <p>I'm <span class="typed" data-typed-items="Developer, Cloud Engineer, DevOps Engineer, Photographer, Student, Consultant"></span></p>
+            <p>I'm <span class="typed" data-typed-items="Cloud Architect, Cloud Engineer, DevOps Engineer, Consultant"></span></p>
             <div class="social-links">
                 <!-- <a href="https://twitter.com/kenoc33" class="twitter"><i class="bx bxl-twitter"></i></a> -->
                 <a href="https://www.instagram.com/keno.coldewey/?hl=de" class="instagram"><i
@@ -85,7 +85,7 @@
     <!-- End Hero -->
     <main id="main">
 
-        <!-- ======= About Section ======= -->
+        <!-- ======= About Section =======
         <section id="about" class="about">
             <div class="container" data-aos="fade-up">
 
@@ -110,10 +110,8 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <ul>
-                                    <!-- <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 30</li>-->
                                     <li><i class="icofont-rounded-right"></i> <strong>Abschluss:</strong> Allgemeine
                                         Hochschulreife 
-                                        <!--(&#8709; 1,6) -->
                                     </li>
                                     <li><i class="icofont-rounded-right"></i> <strong>Abschluss:</strong>
                                         Fachinformatiker für Anwendungsentwicklung (IHK)
@@ -127,11 +125,9 @@
                             </div>
                             <div class="col-lg-6">
                                 <ul>
-                                    <!--                                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 May 1995</li>-->
                                     <li><i class="icofont-rounded-right"></i> <strong>Website:</strong>
                                         <a href="https://coldewey.dev">coldewey.dev</a>
                                     </li>
-                                    <!--                                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +123 456 7890</li>-->
                                     <li><i class="icofont-rounded-right"></i> <strong>Stadt:</strong> Oldenburg,
                                         Niedersachsen
                                     </li>
@@ -143,9 +139,9 @@
 
             </div>
         </section>
-        <!-- End About Section -->
+         End About Section -->
 
-        <!-- ======= Skills Section ======= -->
+        <!-- ======= Skills Section ======= 
         <section id="skills" class="skills section-bg">
             <div class="container" data-aos="fade-up">
 
@@ -216,10 +212,10 @@
 
             </div>
         </section>
-            <!-- End Skills Section -->
+             End Skills Section -->
 
-            <!-- ======= Aditinal Skills Section ======= -->
-            <!--
+            <!-- ======= Aditinal Skills Section =======
+            
     <section id="another-skills" class="another-skills">
         <div class="container" data-aos="fade-up">
 
@@ -229,11 +225,10 @@
                 spezielle Tools oder Eigenschaften in denen ich bewandert bin.
                 </p>
             </div>
-        -->
+        
         <section id="services" class="services">
             <div class="container" data-aos="fade-up">
                 <div class="section-title mt-3">
-                    <!--<h2>Weitere Skills</h2>-->
                     <p>Weitere Skills sind hier übergreifend zu verstehen und unten aufgelistet. Neben den allgmeinen Soft Skills gibt es aber auch noch
                     spezielle Tools oder Eigenschaften in denen ich bewandert bin.
                     </p>
@@ -297,46 +292,13 @@
                                 </div>
                             </div>
 
-                            <!--                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">-->
-                            <!--                    <div class="icon-box iconbox-yellow">-->
-                            <!--                        <div class="icon">-->
-                            <!--                            <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">-->
-                            <!--                                <path stroke="none" stroke-width="0" fill="#f5f5f5"-->
-                            <!--                                      d="M300,503.46388370962813C374.79870501325706,506.71871716319447,464.8034551963731,527.1746412648533,510.4981551193396,467.86667711651364C555.9287308511215,408.9015244558933,512.6030010748507,327.5744911775523,490.211057578863,256.5855673507754C471.097692560561,195.9906835881958,447.69079081568157,138.11976852964426,395.19560036434837,102.3242989838813C329.3053358748298,57.3949838291264,248.02791733380457,8.279543830951368,175.87071277845988,42.242879143198664C103.41431057327972,76.34704239035025,93.79494320519305,170.9812938413882,81.28167332365135,250.07896920659033C70.17666984294237,320.27484674793965,64.84698225790005,396.69656628748305,111.28512138212992,450.4950937839243C156.20124167950087,502.5303643271138,231.32542653798444,500.4755392045468,300,503.46388370962813"></path>-->
-                            <!--                            </svg>-->
-                            <!--                            <i class='bx bx-table'></i>-->
-                            <!--                        </div>-->
-                            <!--                        <h4><a href="">Microsoft Excel</a></h4>-->
-                            <!--                        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>-->
-                            <!--                    </div>-->
-                            <!--                </div>-->
-
-                            <!-- 
-                            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
-                                <div class="icon-box iconbox-red">
-                                    <div class="icon">
-                                        <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-                                            <path stroke="none" stroke-width="0" fill="#f5f5f5"
-                                                d="M300,532.3542879108572C369.38199826031484,532.3153073249985,429.10787420159085,491.63046689027357,474.5244479745417,439.17860296908856C522.8885846962883,383.3225815378663,569.1668002868075,314.3205725914397,550.7432151929288,242.7694973846089C532.6665558377875,172.5657663291529,456.2379748765914,142.6223662098291,390.3689995646985,112.34683881706744C326.66090330228417,83.06452184765237,258.84405631176094,53.51806209861945,193.32584062364296,78.48882559362697C121.61183558270385,105.82097193414197,62.805066853699245,167.19869350419734,48.57481801355237,242.6138429142374C34.843463184063346,315.3850353017275,76.69343916112496,383.4422959591041,125.22947124332185,439.3748458443577C170.7312796277747,491.8107796887764,230.57421082200815,532.3932930995766,300,532.3542879108572">
-                                            </path>
-                                        </svg>
-                                        <i class="bx bx-slideshow"></i>
-                                    </div>
-                                    <h4><a href="">UI Path</a></h4>
-                                    <p>UI Path ist eine Platform die RPA Produkte vertreiben. Diese habe ich geringer Komplexität
-                                        für
-                                        verschiedene Aufgaben der Automatisierung eingesetzt.</p>
-                                </div>
-                            </div>
-                            -->
 
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- End Services Section -->
-
+         End Services Section -->
 
         <!-- ======= Contact Section ======= -->
         <section id="contact" class="contact">
@@ -348,31 +310,7 @@
 
                 <div class="row mt-1">
 
-                    <div class="col-lg-4">
-                        <div class="info">
-                            <div class="address">
-                                <i class="icofont-google-map"></i>
-                                <h4>Location:</h4>
-                                <p>Oldenburg, Niedersachsen, GER</p>
-                            </div>
-
-                            <div class="email">
-                                <i class="icofont-envelope"></i>
-                                <h4>Email:</h4>
-                                <p>mail@coldewey.dev</p>
-                            </div>
-
-                            <!--                        <div class="phone">-->
-                            <!--                            <i class="icofont-phone"></i>-->
-                            <!--                            <h4>Call:</h4>-->
-                            <!--                            <p>+1 5589 55488 55s</p>-->
-                            <!--                        </div>-->
-
-                        </div>
-
-                    </div>
-
-                    <div class="col-lg-8 mt-5 mt-lg-0">
+                    <div class="col-12 mt-5 mt-lg-0 d-flex justify-content-center">
 
                         <form
                             action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSczB3FIWfm65VWpkoiQL7tlUWYcPda26YYPPxDqkUmZbYNwVg/formResponse"
@@ -430,7 +368,7 @@
     <footer id="footer">
         <div class="container">
             <h3>Keno Coldewey</h3>
-            <p>Cloud Engineer & Consultant. (Bachelor of Science)</p>
+            <p>Cloud Architect & Consultant. (Bachelor of Science)</p>
             <div class="social-links">
                 <!-- <a href="https://twitter.com/kenoc33" class="twitter"><i class="bx bxl-twitter"></i></a> -->
                 <a href="https://www.instagram.com/keno.coldewey/?hl=de" class="instagram"><i
