--- a/imprint.html
+++ b/imprint.html
@@ -4,13 +4,12 @@
     <meta charset="utf-8">
     <title>Impressum</title>
     <h1>Impressum</h1>
-    <p><u>Angaben gem. &sect; 5 TMG:</u></p>
     <p>Coldewey, Keno</p>
     <p>Elbestra&szlig;e 9</p>
     <p>26188 Edewecht</p>
     <p><br></p>
     <p><u>Kontaktaufnahme:</u></p>
-    <p>E-Mail: mail@kenoc.de</p>
+    <p>E-Mail: uni.outsource587@passmail.net</p>
     <p>&nbsp;</p>
     <p><strong>Haftungsausschluss &ndash; Disclaimer:</strong></p>
     <p><u>Haftung f&uuml;r Inhalte</u></p>
